♻ Pas de tri in-place sur le podium du jour
La méthode de tri retourne une liste et laisse ainsi croire que le paramètre d'entrée est copié et non modifié, ce qui n'était pas le cas. On retourne maintenant une copie triée de la liste en entrée.